Quick fix: missing key, gaps between details

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,7 +38,7 @@
     width: 100%;
   }
 
-  .sl-details::part(content) {
+  sl-details.details::part(content) {
     padding-top: 0;
   }
 }
